syntax = "proto3";

package cr8r.controller;

import "core/report.proto";

message PFindReportsRequest {
    uint32 experiment_id = 1;
}

message PFindReportsReply {
    repeated core.PReport reports = 1;
}